--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,116 @@
 /app/vendor
 /node_modules
 /app/ui/styles/scss/.sass-cache
+/.sass-cache/1c6f26c01c2a562299d333aa1cd506d71d9454c6/*.scssc
+/.sass-cache/a864d5214b6e8f449ba299567fc9d7b3217e63c7/*.scssc
+/app/vendors/angular-bootstrap/*.json
+/app/vendors/angular-bootstrap/*.js
+/app/vendors/angular-ui-router/*.json
+/app/vendors/angular-ui-router/*.gitignore
+/app/vendors/angular-ui-router/*.yml
+/app/vendors/angular-ui-router/*.js
+/app/vendors/angular-ui-router/*
+/app/vendors/angular-ui-router/*.md
+/app/vendors/angular-ui-router/config/*.js
+/app/vendors/angular-ui-router/lib/*.js
+/app/vendors/angular-ui-router/release/*.js
+/app/vendors/angular-ui-router/release/doc/*.html
+/app/vendors/angular-ui-router/release/doc/scripts/prettify/*.txt
+/app/vendors/angular-ui-router/release/doc/scripts/prettify/*.js
+/app/vendors/angular-ui-router/release/doc/styles/*.css
+/app/vendors/angular-ui-router/sample/*.css
+/app/vendors/angular-ui-router/sample/*.html
+/app/vendors/angular-ui-router/sample/*.json
+/app/vendors/angular-ui-router/sample/*.js
+/app/vendors/angular-ui-router/src/*.js
+/app/vendors/angular-ui-router/test/compat/*.js
+/app/vendors/angular-ui-router/test/*.js
+/app/vendors/angular-ui-router/test/lib/*.js
+/app/vendors/angular/*.json
+/app/vendors/angular/*.md
+/app/vendors/angular/*.css
+/app/vendors/angular/*.js
+/app/vendors/angular/*.gzip
+/app/vendors/angular/*.map
+/app/vendors/bootstrap-sass-official/*.json
+/app/vendors/bootstrap-sass-official/*.md
+/app/vendors/bootstrap-sass-official/*
+/app/vendors/bootstrap-sass-official/assets/fonts/bootstrap/*.eot
+/app/vendors/bootstrap-sass-official/assets/fonts/bootstrap/*.svg
+/app/vendors/bootstrap-sass-official/assets/fonts/bootstrap/*.ttf
+/app/vendors/bootstrap-sass-official/assets/fonts/bootstrap/*.woff
+/app/vendors/bootstrap-sass-official/assets/javascripts/*.js
+/app/vendors/bootstrap-sass-official/assets/javascripts/bootstrap/*.js
+/app/vendors/bootstrap-sass-official/assets/stylesheets/*.scss
+/app/vendors/bootstrap-sass-official/assets/stylesheets/bootstrap/*.scss
+/app/vendors/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/*.scss
+/app/vendors/jquery/*.json
+/app/vendors/jquery/*.txt
+/app/vendors/jquery/*.md
+/app/vendors/jquery/dist/*.js
+/app/vendors/jquery/dist/*.map
+/app/vendors/jquery/external/sizzle/*.txt
+/app/vendors/jquery/external/sizzle/dist/*.js
+/app/vendors/jquery/external/sizzle/dist/*.map
+/app/vendors/jquery/src/*.json
+/app/vendors/jquery/src/*.js
+/app/vendors/jquery/src/ajax/*.js
+/app/vendors/jquery/src/ajax/var/*.js
+/app/vendors/jquery/src/attributes/*.js
+/app/vendors/jquery/src/core/*.js
+/app/vendors/jquery/src/core/var/*.js
+/app/vendors/jquery/src/css/*.js
+/app/vendors/jquery/src/css/var/*.js
+/app/vendors/jquery/src/data/*.js
+/app/vendors/jquery/src/data/var/*.js
+/app/vendors/jquery/src/deferred/*.js
+/app/vendors/jquery/src/effects/*.js
+/app/vendors/jquery/src/event/*.js
+/app/vendors/jquery/src/exports/*.js
+/app/vendors/jquery/src/manipulation/*.js
+/app/vendors/jquery/src/manipulation/var/*.js
+/app/vendors/jquery/src/queue/*.js
+/app/vendors/jquery/src/traversing/*.js
+/app/vendors/jquery/src/traversing/var/*.js
+/app/vendors/jquery/src/var/*.js
+/app/vendors/q/*.json
+/app/vendors/q/*.coverignore
+/app/vendors/q/*.gitignore
+/app/vendors/q/*.jshintrc
+/app/vendors/q/*.mailmap
+/app/vendors/q/*.npmignore
+/app/vendors/q/*.yml
+/app/vendors/q/*.md
+/app/vendors/q/*.js
+/app/vendors/q/*
+/app/vendors/q/benchmark/*.js
+/app/vendors/q/design/*.js
+/app/vendors/q/examples/*.js
+/app/vendors/q/examples/async-generators/*.html
+/app/vendors/q/examples/async-generators/*.js
+/app/vendors/q/examples/async-generators/*.md
+/app/vendors/q/spec/*.js
+/app/vendors/q/spec/lib/jasmine-1.2.0/*.LICENSE
+/app/vendors/q/spec/lib/jasmine-1.2.0/*.js
+/app/vendors/q/spec/lib/jasmine-1.2.0/*.css
+/app/vendors/q/spec/lib/*.js
+/app/vendors/q/spec/*.html
+/app/vendors/sinon/*.json
+/app/vendors/sinon/*.gitignore
+/app/vendors/sinon/*.npmignore
+/app/vendors/sinon/*.yml
+/app/vendors/sinon/*
+/app/vendors/sinon/*.txt
+/app/vendors/sinon/*.md
+/app/vendors/sinon/*.conf
+/app/vendors/sinon/lib/*.js
+/app/vendors/sinon/lib/sinon/*.js
+/app/vendors/sinon/lib/sinon/util/*.js
+/app/vendors/sinon/*.sh
+/app/vendors/sinon/test/node/*.js
+/app/vendors/sinon/test/resources/*.txt
+/app/vendors/sinon/test/rhino/*.js
+/app/vendors/sinon/test/*.js
+/app/vendors/sinon/test/*.html
+/app/vendors/sinon/test/sinon/*.js
+/app/vendors/sinon/test/sinon/util/*.js
